Rotate some menu stuff, having issues with font size, going to try to rotate the whole flex box and change the direction the flex-alignment

--- a/elements/simple-app-panels/simple-app-panels.css
+++ b/elements/simple-app-panels/simple-app-panels.css
@@ -55,10 +55,9 @@
 
 /* Defer transitions until enabled (skip during DOM setup). */
 .transition > #drawer {
-  transition: -webkit-transform ease-in-out 0.3s, width ease-in-out 0.3s, visibility 0.3s;
-  transition: transform ease-in-out 0.3s, width ease-in-out 0.3s, visibility 0.3s;
+  transition: all ease-in-out 0.3s;
 }
 
 .transition > #main {
-  transition: left ease-in-out 0.3s, padding ease-in-out 0.3s;
+  transition: all ease-in-out 0.3s;
 }
